// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Common.Error props bgStyle="filled" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props bgStyle="outline" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-outline"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props bgStyle="transparent" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-transparent"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props borderRadius="8px" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": "8px",
    }
  }
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props borderRadius=16 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": 16,
    }
  }
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props checkGrammar=false 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props checkGrammar=true 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props checkHighlight=false 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props checkHighlight=true 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props checkSpaces=false 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props checkSpaces=true 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props className="my-classname" 1`] = `
<div
  className="uu5-common-error my-classname uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema="brown" 1`] = `
<div
  className="color-schema-brown uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema="brown-rich" 1`] = `
<div
  className="color-schema-brown-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema="cyan" 1`] = `
<div
  className="color-schema-cyan uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema="cyan-rich" 1`] = `
<div
  className="color-schema-cyan-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema="default" 1`] = `
<div
  className="color-schema-default uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema="green" 1`] = `
<div
  className="color-schema-green uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema="green-rich" 1`] = `
<div
  className="color-schema-green-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema="grey" 1`] = `
<div
  className="color-schema-grey uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema="grey-rich" 1`] = `
<div
  className="color-schema-grey-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema="orange" 1`] = `
<div
  className="color-schema-orange uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema="orange-rich" 1`] = `
<div
  className="color-schema-orange-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema="pink" 1`] = `
<div
  className="color-schema-pink uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema="pink-rich" 1`] = `
<div
  className="color-schema-pink-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema="purple" 1`] = `
<div
  className="color-schema-purple uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema="purple-rich" 1`] = `
<div
  className="color-schema-purple-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema="red" 1`] = `
<div
  className="color-schema-red uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema="red-rich" 1`] = `
<div
  className="color-schema-red-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema="yellow" 1`] = `
<div
  className="color-schema-yellow uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema="yellow-rich" 1`] = `
<div
  className="color-schema-yellow-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      <UU5.Common.TextCorrectorContextConsumer
        key="0"
        text="This is Content from ContentMixin"
      />
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props content=12345 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      12345
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props controlled=false 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props controlled=true 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props default props 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props disabled=false 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props disabled=true 1`] = `
<div
  className="uu5-common-error uu5-common-disabled uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Common.Error props dynamic=false 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props dynamic=true 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props elevation="-1" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled uu5-common-elevation--1"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props elevation="5" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled uu5-common-elevation-5"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props error props test 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="errorID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props error props test 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="errorID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props error=undefined 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props errorData=undefined 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props errorInfo="Kontaktujte prosím +4U Helpdesk" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props hidden=false 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props hidden=true 1`] = `
<div
  className="uu5-common-error uu5-common-hidden uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props id="myId" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="myId"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props ignoreHTML=false 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props ignoreHTML=true 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props inline=false 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props inline=true 1`] = `
<span
  className="uu5-common-error uu5-common-error-inline uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  Error
</span>
`;

exports[`UU5.Common.Error props mainAttrs=undefined 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props moreInfo=false 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props moreInfo=true 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
  <div
    className="uu5-common-error-details"
    key="errorDetails"
  >
    <a
      className="uu5-common-error-details-button"
      onClick={[Function]}
    >
      <Lsi
        lsi={
          Object {
            "cs": "Zobrazit podrobnosti o chybě.",
            "en": "View error details.",
            "sk": "Zobraziť podrobnosti o chybe.",
            "uk": "Показати деталі помилки.",
          }
        }
      />
      <span
        className="mdi mdi-menu-down uu5-common-error-icon"
      />
    </a>
    <div
      className="uu5-common-error-details-body"
      id="uuID-error"
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="uu5-common-error-pre-wrapper"
      >
        <Button
          className="uu5-common-error-copy-info-button"
          content={
            <Lsi
              allowTags={Array []}
              className={null}
              content={null}
              controlled={true}
              disabled={false}
              dynamic={false}
              hidden={false}
              id={null}
              ignoreInnerHTML={false}
              language={null}
              lsi={
                Object {
                  "cs": "Kopírovat podrobnosti o chybě",
                  "en": "Copy error details",
                  "sk": "Skopírovať podrobnosti o chybe.",
                  "uk": "Скопіювати деталі помилки",
                }
              }
              mainAttrs={null}
              name={null}
              nestingLevel={null}
              noIndex={false}
              params={null}
              parent={null}
              pureRender={false}
              ref_={null}
              selected={false}
              style={null}
              tooltip={null}
            />
          }
          onClick={[Function]}
        />
        <pre
          className="uu5-common-error-pre"
        >
          {
  "message": "Error",
  "data": null,
  "stackTrace": [],
  "url": "http://example.com/test_url_for_tools-ifc.test.js?param=value",
  "time": null,
  "navigator": {
    "appCodeName": "Mozilla",
    "appName": "Netscape",
    "appVersion": "4.0",
    "cookieEnabled": true,
    "hardwareConcurrency": 8,
    "language": "en-US",
    "languages": [
      "en-US",
      "en"
    ],
    "onLine": true,
    "platform": "",
    "product": "Gecko",
    "productSub": "20030107",
    "userAgent": "Mozilla/5.0 (win32) AppleWebKit/537.36 (KHTML, like Gecko) jsdom",
    "vendor": "Apple Computer, Inc.",
    "vendorSub": ""
  },
  "libs": {
    "uu5g04": "1.37.0",
    "uu5g04-bricks": "1.37.0"
  }
}
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props name="myName" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel="bigBox" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel="box" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel="container" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel="inline" 1`] = `
<span
  className="uu5-common-error uu5-common-error-inline uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  Error
</span>
`;

exports[`UU5.Common.Error props nestingLevel="page" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel="smallBox" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel="smallBoxCollection" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel="spa" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props noIndex=false 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props noIndex=true 1`] = `
<div
  className="uu5-common-error uu5-noindex uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props pureRender=false 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props pureRender=true 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props selected=false 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props selected=true 1`] = `
<div
  className="uu5-common-error uu5-common-selected uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props silent=false 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props silent=true 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-error-silent uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props textCorrector=false 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props textCorrector=true 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props tooltip="My Tooltip" 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props without test tool API test01 - default snapshot 1`] = `
<Error
  id="errorID"
>
  <div
    className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-common-error-main-wrapper"
    >
      <div
        className="uu5-common-error-icon-wrapper"
      >
        <span
          className="mdi mdi-alert-circle uu5-common-error-icon"
        />
      </div>
      <div
        className="uu5-common-error-content"
      >
        Error
      </div>
    </div>
  </div>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test02 - erroData 1`] = `
<Error
  errorData={
    Object {
      "invalidToken": Object {
        "data": "some data...",
        "id": "123",
      },
    }
  }
  id="errorID"
>
  <div
    className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-common-error-main-wrapper"
    >
      <div
        className="uu5-common-error-icon-wrapper"
      >
        <span
          className="mdi mdi-alert-circle uu5-common-error-icon"
        />
      </div>
      <div
        className="uu5-common-error-content"
      >
        Error
        <div
          className="uu5-common-error-pre-wrapper"
          key="errorData"
        >
          <pre
            className="uu5-common-error-pre"
          >
            {
  "invalidToken": {
    "id": "123",
    "data": "some data..."
  }
}
          </pre>
        </div>
      </div>
    </div>
  </div>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test02 - erroData 2`] = `
<Error
  errorData={
    Object {
      "invalidToken": Object {
        "data": "some new set props data...",
        "id": "456",
      },
    }
  }
  id="errorID"
>
  <div
    className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-common-error-main-wrapper"
    >
      <div
        className="uu5-common-error-icon-wrapper"
      >
        <span
          className="mdi mdi-alert-circle uu5-common-error-icon"
        />
      </div>
      <div
        className="uu5-common-error-content"
      >
        Error
        <div
          className="uu5-common-error-pre-wrapper"
          key="errorData"
        >
          <pre
            className="uu5-common-error-pre"
          >
            {
  "invalidToken": {
    "id": "456",
    "data": "some new set props data..."
  }
}
          </pre>
        </div>
      </div>
    </div>
  </div>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test03 - error 1`] = `
<Error
  error={[Error: This is unhandled exception from Jest]}
  id="errorID"
>
  <div
    className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-common-error-main-wrapper"
    >
      <div
        className="uu5-common-error-icon-wrapper"
      >
        <span
          className="mdi mdi-alert-circle uu5-common-error-icon"
        />
      </div>
      <div
        className="uu5-common-error-content"
      >
        Error
      </div>
    </div>
  </div>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test04 - error 1`] = `
<Error
  id="errorID"
>
  <div
    className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-common-error-main-wrapper"
    >
      <div
        className="uu5-common-error-icon-wrapper"
      >
        <span
          className="mdi mdi-alert-circle uu5-common-error-icon"
        />
      </div>
      <div
        className="uu5-common-error-content"
      >
        Error
      </div>
    </div>
  </div>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test04 - error 2`] = `
<Error
  id="errorID"
  silent={true}
>
  <div
    className="uu5-common-error uu5-common-error-small-box uu5-common-error-silent uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-common-error-main-wrapper"
    >
      <div
        className="uu5-common-error-icon-wrapper"
      >
        <span
          className="mdi mdi-alert-circle uu5-common-error-icon"
        />
      </div>
      <div
        className="uu5-common-error-content"
      >
        Error
      </div>
    </div>
  </div>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test05 - inline 1`] = `
<Error
  id="errorID"
>
  <div
    className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-common-error-main-wrapper"
    >
      <div
        className="uu5-common-error-icon-wrapper"
      >
        <span
          className="mdi mdi-alert-circle uu5-common-error-icon"
        />
      </div>
      <div
        className="uu5-common-error-content"
      >
        Error
      </div>
    </div>
  </div>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test05 - inline 2`] = `
<Error
  id="errorID"
  inline={true}
>
  <span
    className="uu5-common-error uu5-common-error-inline uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    Error
  </span>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test06 - moreInfo 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="errorID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props without test tool API test06 - moreInfo 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="errorID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
  <div
    className="uu5-common-error-details"
    key="errorDetails"
  >
    <a
      className="uu5-common-error-details-button"
      onClick={[Function]}
    >
      <Lsi
        lsi={
          Object {
            "cs": "Zobrazit podrobnosti o chybě.",
            "en": "View error details.",
            "sk": "Zobraziť podrobnosti o chybe.",
            "uk": "Показати деталі помилки.",
          }
        }
      />
      <span
        className="mdi mdi-menu-down uu5-common-error-icon"
      />
    </a>
    <div
      className="uu5-common-error-details-body"
      id="errorID-error"
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="uu5-common-error-pre-wrapper"
      >
        <Button
          className="uu5-common-error-copy-info-button"
          content={
            <Lsi
              allowTags={Array []}
              className={null}
              content={null}
              controlled={true}
              disabled={false}
              dynamic={false}
              hidden={false}
              id={null}
              ignoreInnerHTML={false}
              language={null}
              lsi={
                Object {
                  "cs": "Kopírovat podrobnosti o chybě",
                  "en": "Copy error details",
                  "sk": "Skopírovať podrobnosti o chybe.",
                  "uk": "Скопіювати деталі помилки",
                }
              }
              mainAttrs={null}
              name={null}
              nestingLevel={null}
              noIndex={false}
              params={null}
              parent={null}
              pureRender={false}
              ref_={null}
              selected={false}
              style={null}
              tooltip={null}
            />
          }
          onClick={[Function]}
        />
        <pre
          className="uu5-common-error-pre"
        >
          {
  "message": "Error",
  "data": null,
  "stackTrace": [],
  "url": "http://example.com/test_url_for_tools-ifc.test.js?param=value",
  "time": null,
  "navigator": {
    "appCodeName": "Mozilla",
    "appName": "Netscape",
    "appVersion": "4.0",
    "cookieEnabled": true,
    "hardwareConcurrency": 8,
    "language": "en-US",
    "languages": [
      "en-US",
      "en"
    ],
    "onLine": true,
    "platform": "",
    "product": "Gecko",
    "productSub": "20030107",
    "userAgent": "Mozilla/5.0 (win32) AppleWebKit/537.36 (KHTML, like Gecko) jsdom",
    "vendor": "Apple Computer, Inc.",
    "vendorSub": ""
  },
  "libs": {
    "uu5g04": "1.37.0",
    "uu5g04-bricks": "1.37.0"
  }
}
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props without test tool API test07 - errorInfo 1`] = `
<Error
  id="errorID"
>
  <div
    className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-common-error-main-wrapper"
    >
      <div
        className="uu5-common-error-icon-wrapper"
      >
        <span
          className="mdi mdi-alert-circle uu5-common-error-icon"
        />
      </div>
      <div
        className="uu5-common-error-content"
      >
        Error
      </div>
    </div>
  </div>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test07 - errorInfo 2`] = `
<Error
  errorInfo="Please contact +4U Helpdesk"
  id="errorID"
>
  <div
    className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-common-error-main-wrapper"
    >
      <div
        className="uu5-common-error-icon-wrapper"
      >
        <span
          className="mdi mdi-alert-circle uu5-common-error-icon"
        />
      </div>
      <div
        className="uu5-common-error-content"
      >
        Error
      </div>
    </div>
  </div>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test08 - All Error props is set 1`] = `
<Error
  error={[Error: Unhandled exception]}
  errorData={
    Object {
      "invalidToken": Object {
        "data": "some data...",
        "id": "123",
      },
    }
  }
  errorInfo="Please contact helpdesk."
  id="errorID"
  inline={true}
  moreInfo={true}
  silent={true}
>
  <span
    className="uu5-common-error uu5-common-error-inline uu5-common-error-silent uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    Error
  </span>
</Error>
`;
